# appjsonify

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: pytest.yml
appjsonify/: __init__.py  main.py
appjsonify/modules/: __init__.py  common.py  doc.py  runner.py
appjsonify/modules/dump/: __init__.py  dump.py
appjsonify/modules/edit/: __init__.py  concat_columns.py  concat_pages.py  detect_sections.py  extract_captions_with_ml.py  extract_footnotes.py  extract_footnotes_with_ml.py  extract_lines.py  extract_paragraphs.py  remove_equations_with_ml.py  remove_figures_with_ml.py  remove_illegal_tokens.py  remove_lines_by_objects.py  remove_meta.py  remove_tables_with_ml.py  tailor_references.py
appjsonify/modules/load/: __init__.py  load.py  load_objects_with_ml.py
appjsonify/modules/load/models/: __init__.py  base_model.py  docbank.py  publaynet.py  tablebank.py
appjsonify/modules/load/models/detectron2_demo/: README.md
appjsonify/utils/: __init__.py  download.py  error.py  pipeline_checker.py  print.py  template.py
appjsonify/weights/: .gitignore
appjsonify/weights/docbank/: .gitignore
appjsonify/weights/tablebank/: .gitignore
docs/: customize.md  definition.md  modules.md  prerequisites.md
tests/: test_main.py
tests/modules/edit/: test_extract_captions_with_ml.py  test_extract_footnotes.py  test_extract_footnotes_with_ml.py  test_extract_lines.py  test_remove_equations_with_ml.py  test_remove_figures_with_ml.py  test_remove_illegal_tokens.py  test_remove_meta.py  test_remove_tables_with_ml.py
